--- a/PokerPlanning/Client/Shared/MainLayout.razor
+++ b/PokerPlanning/Client/Shared/MainLayout.razor
@@ -4,8 +4,9 @@
 <MudSnackbarProvider/>
 <MudLayout>
     <MudAppBar Elevation="1">
-        <MudText Typo="Typo.h5" Class="ml-3">Poker Planning for PAH</MudText>
+        <MudText Typo="Typo.h5" Class="ml-3">Poker Planning</MudText>
         <MudSpacer />
+       <MudLink Href="https://github.com/jbridenthal/PokerPlanning" Color="Color.Warning">https://github.com/jbridenthal/PokerPlanning</MudLink>
         @*<MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End" />*@
     </MudAppBar>
     <MudMainContent>
