--- a/PokerPlanning/Client/Pages/Components/UsersList.razor
+++ b/PokerPlanning/Client/Pages/Components/UsersList.razor
@@ -49,8 +49,9 @@
 
 @code {
     [Parameter]
-    public Dictionary<string, User> Users { get; set; }
+    public Dictionary<string, User> Users { get; set; } = new Dictionary<string, User>();
 
     [Parameter]
-    public bool ShowVotes { get; set; }
+    public bool ShowVotes { get; set; }  
+    
 }
