--- a/PokerPlanning/Client/Pages/Index.razor
+++ b/PokerPlanning/Client/Pages/Index.razor
@@ -1,6 +1,7 @@
 ﻿@page "/"
 @inject NavigationManager NavigationManager;
 @inject IJSRuntime JSRuntime;
+@inject ISnackbar Snackbar
 @implements IAsyncDisposable
 
 
@@ -65,7 +66,7 @@
                 <MudItem xs="3" sm="3">
                     <textarea style="width: 100%; height: 100px;" @ref="TextAreaRef">
                         @messages
-                                            </textarea>
+                                                    </textarea>
                 </MudItem>
                 <MudItem xs="9"></MudItem>
                 <MudItem xs="3" sm="3">
@@ -139,11 +140,6 @@
         }
     }
 
-    private async Task HandleShowVotes()
-    {
-        showVotes = true;
-    }
-
     private async Task HandleClearVotes()
     {
         if (hubConnection != null)
@@ -153,27 +149,30 @@
         }
     }
 
+    private bool HandleShowVotes() => showVotes = true;
+
     public Variant GetVoteColor(string vote)
     {
-        var user = Users.Values.Where(x => x.Name.Equals(userName)).FirstOrDefault();
-        return user.Vote != null && user.Vote.Equals(vote) ? Variant.Filled : Variant.Outlined;
+        var user = Users.Values.Where(x => x.Name != null && x.Name.Equals(userName)).FirstOrDefault();
+        return user != null && user.Vote != null && user.Vote.Equals(vote) ? Variant.Filled : Variant.Outlined;
     }
 
     public bool GetVoteDisable()
     {
-        var user = Users.Values.Where(x => x.Name.Equals(userName)).FirstOrDefault();
-        if (user.Role == Role.Observer)
+        var user = Users.Values.Where(x => x.Name != null && x.Name.Equals(userName)).FirstOrDefault();
+        if (user != null && user.Role == Role.Observer)
         {
             return true;
         }
 
-        if(showVotes)
+        if (showVotes)
         {
             return true;
         }
 
         return false;
     }
+
 
     public bool IsConnectDisabled => string.IsNullOrEmpty(userName) || string.IsNullOrWhiteSpace(userName);
 
