--- a/PokerPlanning/Client/Pages/Components/UsersList.razor
+++ b/PokerPlanning/Client/Pages/Components/UsersList.razor
@@ -40,6 +40,7 @@
                             </MudItem>
                         </MudGrid>
                     </MudListItem>
+                     <MudDivider />
                 }
             </NestedList>
         </MudListItem>
