--- a/PokerPlanning/Client/Shared/MainLayout.razor
+++ b/PokerPlanning/Client/Shared/MainLayout.razor
@@ -1,17 +1,31 @@
 ﻿@inherits LayoutComponentBase
-<MudThemeProvider/>
+<MudThemeProvider Theme="MyCustomTheme"/>
 <MudDialogProvider/>
 <MudSnackbarProvider/>
 <MudLayout>
     <MudAppBar Elevation="1">
         <MudText Typo="Typo.h5" Class="ml-3">Poker Planning</MudText>
         <MudSpacer />
-       <MudLink Href="https://github.com/jbridenthal/PokerPlanning" Color="Color.Warning">https://github.com/jbridenthal/PokerPlanning</MudLink>
+       <MudLink Href="https://github.com/jbridenthal/PokerPlanning" Color="Color.Dark">https://github.com/jbridenthal/PokerPlanning</MudLink>
         @*<MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End" />*@
     </MudAppBar>
     <MudMainContent>
         <MudContainer MaxWidth="MaxWidth.Large">
         @Body
         </MudContainer>
+
     </MudMainContent>
-</MudLayout>
+ </MudLayout>
+
+@code{
+    MudTheme MyCustomTheme = new MudTheme()
+    {
+        Palette = new Palette()
+        {
+            Primary = Colors.Blue.Lighten1,
+            Secondary = Colors.Green.Accent4,
+            AppbarBackground = Colors.BlueGrey.Lighten1,
+            AppbarText = Colors.Grey.Darken3
+        }
+    };
+}
