Started adding new room feature. Renamed and cleaned up a few items as well

--- a/PokerPlanning/Client/Pages/Components/UsersList.razor
+++ b/PokerPlanning/Client/Pages/Components/UsersList.razor
@@ -16,7 +16,7 @@
                 {
                     <MudListItem>
                         <MudGrid>
-                            <MudItem xs="3">@user.Name</MudItem>
+                            <MudItem xs="3">@user.Name @user.Room</MudItem>
                             <MudItem xs="3">
                                 @if (@item != Role.Observer)
                                 {
