Initial start to rooms

--- a/PokerPlanning/Client/Pages/Components/CreateRoomDialog.razor
+++ b/PokerPlanning/Client/Pages/Components/CreateRoomDialog.razor
@@ -8,7 +8,7 @@
         </MudText>
     </TitleContent>
     <DialogContent>
-        <MudTextField Value="@newRoomName" Label="Room Name"/>
+        <MudTextField @bind-Value="@newRoomName" Label="Room Name"/>
     </DialogContent>
     <DialogActions>
         <MudButton OnClick="Cancel">Cancel</MudButton>
