--- a/PokerPlanning/Client/Shared/MainLayout.razor
+++ b/PokerPlanning/Client/Shared/MainLayout.razor
@@ -4,7 +4,7 @@
 <MudSnackbarProvider/>
 <MudLayout>
     <MudAppBar Elevation="1">
-        <MudText Typo="Typo.h5" Class="ml-3">Poker Planning</MudText>
+        <MudText Typo="Typo.h5" Class="ml-3">Poker Planning for PAH</MudText>
         <MudSpacer />
        <MudLink Href="https://github.com/jbridenthal/PokerPlanning" Color="Color.Dark">https://github.com/jbridenthal/PokerPlanning</MudLink>
         @*<MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End" />*@
