--- a/PokerPlanning/Client/Pages/Components/UsersList.razor
+++ b/PokerPlanning/Client/Pages/Components/UsersList.razor
@@ -18,7 +18,7 @@
                         <MudGrid>
                             <MudItem xs="3">@user.Name</MudItem>
                             <MudItem xs="3">
-                                @if (@item != Role.Observer)
+                                @if (@item != Role.Observer && @item != Role.Moderator)
                                 {
                                     @if (!ShowVotes)
                                     {
