--- a/PokerPlanning/Client/Shared/MainLayout.razor
+++ b/PokerPlanning/Client/Shared/MainLayout.razor
@@ -1,31 +1,33 @@
 ﻿@inherits LayoutComponentBase
-<MudThemeProvider Theme="MyCustomTheme"/>
-<MudDialogProvider/>
-<MudSnackbarProvider/>
+<MudThemeProvider Theme="MyCustomTheme" />
+<MudDialogProvider />
+<MudSnackbarProvider />
 <MudLayout>
     <MudAppBar Elevation="1">
         <MudText Typo="Typo.h5" Class="ml-3">Planning Poker</MudText>
         <MudSpacer />
-       <MudLink Href="https://github.com/jbridenthal/PokerPlanning" Color="Color.Dark">https://github.com/jbridenthal/PokerPlanning</MudLink>
         @*<MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End" />*@
     </MudAppBar>
     <MudMainContent>
         <MudContainer MaxWidth="MaxWidth.ExtraExtraLarge">
-        @Body
+            @Body
         </MudContainer>
-
+        <footer>
+            <MudSpacer />  <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" /><MudLink Href="https://github.com/jbridenthal/PokerPlanning" Target="_blank" Color="Color.Dark">https://github.com/jbridenthal/PokerPlanning</MudLink>
+        </footer>
     </MudMainContent>
- </MudLayout>
+</MudLayout>
 
-@code{
+@code {
     MudTheme MyCustomTheme = new MudTheme()
-    {
-        Palette = new Palette()
         {
-            Primary = Colors.Blue.Lighten1,
-            Secondary = Colors.Green.Accent4,
-            AppbarBackground = Colors.BlueGrey.Lighten1,
-            AppbarText = Colors.Grey.Darken3
-        }
-    };
+            Palette = new Palette()
+            {
+                Primary = Colors.Blue.Lighten1,
+                Secondary = Colors.Green.Accent4,
+                AppbarBackground = Colors.BlueGrey.Lighten1,
+                AppbarText = Colors.Grey.Darken3,
+                Tertiary = Colors.BlueGrey.Lighten1
+            }
+        };
 }
