--- a/PokerPlanning/Client/Shared/MainLayout.razor
+++ b/PokerPlanning/Client/Shared/MainLayout.razor
@@ -23,8 +23,8 @@
         {
             Palette = new Palette()
             {
-                Primary = Colors.Blue.Lighten1,
-                Secondary = Colors.Green.Accent4,
+                Primary = Colors.Blue.Darken3,
+                Secondary = Colors.Green.Darken3,
                 AppbarBackground = Colors.BlueGrey.Lighten1,
                 AppbarText = Colors.Grey.Darken3,
                 Tertiary = Colors.BlueGrey.Lighten1
