initial add local storage for refresh

--- a/PokerPlanning/Client/Pages/Index.razor
+++ b/PokerPlanning/Client/Pages/Index.razor
@@ -2,6 +2,7 @@
 @inject NavigationManager NavigationManager;
 @inject IJSRuntime JSRuntime;
 @inject ISnackbar Snackbar
+@inject Blazored.LocalStorage.ILocalStorageService localStorage
 @implements IAsyncDisposable
 
 
@@ -34,29 +35,30 @@ else
                     <MudButton Disabled="GetVoteDisable()" Variant="GetVoteColor('?'.ToString())" Color="Color.Primary" Size="Size.Large" OnClick="() => HandleVoting('?'.ToString())"> ? </MudButton>
                 </MudItem>
             </MudGrid>
-            <MudGrid>          
+            <MudGrid>
                 <MudItem xs="9">
-                    <MudButton Variant="Variant.Filled" Color="Color.Tertiary" FullWidth="true" EndIcon="@Icons.Filled.Person"  OnClick="()=> showVotes = true"> Show votes for only me </MudButton>
+                    <MudButton Variant="Variant.Filled" Color="Color.Tertiary" FullWidth="true" EndIcon="@Icons.Filled.Person" OnClick="()=> showVotes = true"> Show votes for only me </MudButton>
                 </MudItem>
                 <MudItem xs="9">
-                    <MudButton Variant="Variant.Filled" Color="Color.Primary" FullWidth="true"  EndIcon="@Icons.Filled.People" OnClick="()=> HandleShowVotes()" Disabled="@ModeratorOnly()"> Show votes for everyone</MudButton>
+                    <MudButton Variant="Variant.Filled" Color="Color.Primary" FullWidth="true" EndIcon="@Icons.Filled.People" OnClick="()=> HandleShowVotes()" Disabled="@ModeratorOnly()"> Show votes for everyone</MudButton>
                 </MudItem>
                 <MudItem xs="9">
-                    <MudButton Variant="Variant.Filled" Color="Color.Secondary" FullWidth="true"  OnClick="()=> HandleClearVotes()" Disabled="@ModeratorOnly()"> Clear votes for everyone</MudButton>
+                    <MudButton Variant="Variant.Filled" Color="Color.Secondary" FullWidth="true" OnClick="()=> HandleClearVotes()" Disabled="@ModeratorOnly()"> Clear votes for everyone</MudButton>
                 </MudItem>
             </MudGrid>
-            @if(ModeratorOnly())
+            @if (ModeratorOnly())
             {
                 <MudText Color="Color.Error">Only moderators can show or clear votes for everyone at this time</MudText>
             }
         </MudItem>
         <MudItem xl="4">
             <UsersList Users=@Users ShowVotes="@showVotes" Room="@GetConnectedRoom()"></UsersList>
-            </MudItem>
+        </MudItem>
     </MudGrid>
 }
 
 @code {
+    const string LOCAL_STORAGE_NAME = "PokerPlanning.UserInfo";
     private HubConnection? hubConnection;
     private string userName { get; set; } = string.Empty;
     private string message = string.Empty;
@@ -66,6 +68,18 @@ else
     private Dictionary<string, User> Users = new Dictionary<string, User>();
     private bool showVotes = false;
     private static Dictionary<string, List<string>> Rooms = new Dictionary<string, List<string>>();
+    private User currentUser = new();
+
+    protected override async Task OnInitializedAsync()
+    {
+        currentUser = await localStorage.GetItemAsync<User>(LOCAL_STORAGE_NAME);
+        if (!string.IsNullOrWhiteSpace(currentUser.Name))
+        {
+            userName = currentUser.Name;
+            role = currentUser.Role;
+            await Connect();
+        }
+    }
 
     private async Task Connect()
     {
@@ -73,6 +87,14 @@ else
         .WithUrl(NavigationManager.ToAbsoluteUri($"/pokerhub?username={userName}&role={role}"))
         .WithAutomaticReconnect()
         .Build();
+
+        currentUser = new User
+            {
+                Name = userName,
+                Role = role
+            };
+
+        await localStorage.SetItemAsync(LOCAL_STORAGE_NAME, currentUser);
 
         hubConnection.On<string>("RecieveUserId", (connectionId) =>
        {
@@ -99,7 +121,7 @@ else
             Rooms = rooms;
             StateHasChanged();
         });
-        
+
         hubConnection.On("ClearVotes", () =>
         {
             showVotes = false;
@@ -202,7 +224,8 @@ else
 
     public bool ModeratorOnly()
     {
-        if(Users.Values.Any(x=>x.Role == Role.Moderator)) {
+        if (Users.Values.Any(x => x.Role == Role.Moderator))
+        {
             if (role != Role.Moderator)
             {
                 return true;
