--- a/PokerPlanning/Client/Shared/MainLayout.razor
+++ b/PokerPlanning/Client/Shared/MainLayout.razor
@@ -14,7 +14,7 @@
                     <MudChip Icon="@Icons.Material.Filled.Settings" Color="Color.Primary">@_appStateService.CurrentUser?.Name</MudChip>
                 </ActivatorContent>
                 <ChildContent>
-                    <MudMenuItem OnClick="">Change Name</MudMenuItem>
+                    <MudMenuItem>Change Name</MudMenuItem>
                     <MudMenuItem>Change Role</MudMenuItem>
                 </ChildContent>
             </MudMenu>
